vs-conf/checkout-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: checkoutservice
  namespace: hipster
spec:
  hosts:
    - checkoutservice
  http:
  - route:
    - destination:
        host: checkoutservice
    # retries:
    #   attempts: 3
    #   perTryTimeout: 150ms
    #   retryOn: 5xx
    # timeout: 500ms
