vs-conf/currency-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: currencyservice
  namespace: hipster
spec:
  host: currencyservice.hipster.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      consecutiveErrors: 3
      interval: 100ms
      baseEjectionTime: 3m
      maxEjectionPercent: 100
