vs-conf/email-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: emailservice
  namespace: hipster
spec:
  hosts:
    - emailservice
  http:
  - route:
    - destination:
        host: emailservice
    timeout: 500ms
