vs-conf/frontend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: hipster
spec:
  hosts:
    - frontend
  http:
  - route:
    - destination:
        host: frontend
    timeout: 1500ms
