vs-conf/payment-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: paymentservice
  namespace: hipster
spec:
  host: paymentservice.hipster.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      consecutiveErrors: 1
      interval: 100ms
      baseEjectionTime: 3m
      maxEjectionPercent: 100
