vs-conf/payment-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: paymentservice
  namespace: hipster
spec:
  hosts:
    - paymentservice
  http:
  - route:
    - destination:
        host: paymentservice
    timeout: 500ms
    # retries:
    #   attempts: 3
    #   perTryTimeout: 100ms
    #   retryOn: 5xx
