vs-conf/recommend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendationservice
  namespace: hipster
spec:
  hosts:
    - recommendationservice
  http:
  - route:
    - destination:
        host: recommendationservice
    retries:
      attempts: 3
      perTryTimeout: 120ms
      retryOn: 5xx
