vs-conf/shipping-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shippingservice
  namespace: hipster
spec:
  hosts:
    - shippingservice
  http:
  - route:
    - destination:
        host: shippingservice
    retries:
      attempts: 3
      perTryTimeout: 100ms
      retryOn: 5xx
